--- a/packages/boot/package.json
+++ b/packages/boot/package.json
@@ -30,11 +30,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@midwayjs/cron": "^3.15.0",
     "@midwayjs/info": "^3.15.0",
     "@midwayjs/prometheus": "^3.15.0",
     "@midwayjs/redis": "^3.15.0",
     "@midwayjs/static-file": "^3.15.0",
-    "@midwayjs/upload": "3.15.0",
+    "@midwayjs/upload": "^3.15.0",
     "@mwcp/ali-oss": "^22.0.1",
     "@mwcp/cache": "^22.0.1",
     "@mwcp/fetch": "^26.0.1",
