--- a/packages/boot/package.json
+++ b/packages/boot/package.json
@@ -36,13 +36,13 @@
     "@midwayjs/redis": "^3.16.4",
     "@midwayjs/static-file": "^3.16.4",
     "@midwayjs/upload": "^3.16.4",
-    "@mwcp/ali-oss": "^30.17.1",
-    "@mwcp/cache": "^30.17.1",
-    "@mwcp/fetch": "^30.0.0",
-    "@mwcp/jwt": "^30.17.1",
+    "@mwcp/ali-oss": "^30.18.0",
+    "@mwcp/cache": "^30.18.0",
+    "@mwcp/fetch": "^30.0.1",
+    "@mwcp/jwt": "^30.18.0",
     "@mwcp/kmore": "^61.2.10",
     "@mwcp/koid": "^15.1.0",
-    "@mwcp/otel": "^30.17.1",
+    "@mwcp/otel": "^30.18.0",
     "undici": "^6.19.2"
   },
   "devDependencies": {
@@ -78,7 +78,7 @@
     "clean:dist": "npm run clean:cache && rm -rf dist/*",
     "clean:lock": "rm -f package-lock.json",
     "clean:log": "rm -rf ./logs ./run",
-    "cov": "c8 --all npm run test -- --parallel=false",
+    "cov": "c8 --all npm run test -- ",
     "db:gen": "kmore gen --path ./src",
     "dev": "cross-env MIDWAY_SERVER_ENV=local mwtsc --watch --run @midwayjs/mock/app",
     "lint": "eslint --fix --cache src test",
