--- a/packages/boot/package.json
+++ b/packages/boot/package.json
@@ -37,13 +37,14 @@
     "@midwayjs/static-file": "^3.16.8",
     "@midwayjs/tenant": "^3.16.5",
     "@midwayjs/upload": "^3.16.8",
-    "@mwcp/ali-oss": "^37.0.0",
-    "@mwcp/cache": "^37.0.0",
+    "@mwcp/ali-oss": "^37.2.0",
+    "@mwcp/cache": "^37.2.0",
     "@mwcp/fetch": "^32.0.0",
-    "@mwcp/jwt": "^37.0.0",
+    "@mwcp/jwt": "^37.2.0",
     "@mwcp/kmore": "^66.0.0",
     "@mwcp/koid": "^17.0.0",
-    "@mwcp/otel": "^37.0.0",
+    "@mwcp/pgmq": "^1.0.0",
+    "@mwcp/otel": "^37.2.0",
     "undici": "^6.19.7"
   },
   "devDependencies": {
