--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -87,6 +87,24 @@ jobs:
         env:
           CI: true
 
+      - name: Init Database
+        run: |
+          export cwd=`pwd`
+          . .scripts/ci/ci-env.sh
+          .scripts/ci/ci-prepare.sh
+          .scripts/ci/ci-init-db.sh
+        env:
+          CI: true
+          POSTGRES_HOST: postgres
+          POSTGRES_PORT: 5432
+          POSTGRES_DB: db_ci_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          PGPASSWORD: postgres
+          PGMQ_HOST: pgmq
+          PGMQ_PORT: 5432
+          PGMQ_PASSWORD: postgres
+
       - name: Build
         run: |
           pwd
@@ -108,23 +126,23 @@ jobs:
         env:
           CI: true
 
-      - name: Init Database
-        run: |
-          export cwd=`pwd`
-          . .scripts/ci/ci-env.sh
-          .scripts/ci/ci-prepare.sh
-          .scripts/ci/ci-init-db.sh
-        env:
-          CI: true
-          POSTGRES_HOST: postgres
-          POSTGRES_PORT: 5432
-          POSTGRES_DB: db_ci_test
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          PGPASSWORD: postgres
-          PGMQ_HOST: pgmq
-          PGMQ_PORT: 5432
-          PGMQ_PASSWORD: postgres
+      # - name: Init Database
+      #   run: |
+      #     export cwd=`pwd`
+      #     . .scripts/ci/ci-env.sh
+      #     .scripts/ci/ci-prepare.sh
+      #     .scripts/ci/ci-init-db.sh
+      #   env:
+      #     CI: true
+      #     POSTGRES_HOST: postgres
+      #     POSTGRES_PORT: 5432
+      #     POSTGRES_DB: db_ci_test
+      #     POSTGRES_USER: postgres
+      #     POSTGRES_PASSWORD: postgres
+      #     PGPASSWORD: postgres
+      #     PGMQ_HOST: pgmq
+      #     PGMQ_PORT: 5432
+      #     PGMQ_PASSWORD: postgres
 
       - name: Testing
         run: |
