--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -68,6 +68,10 @@ jobs:
           echo "\l" | psql -h $POSTGRES_HOST -p $POSTGRES_PORT -U$POSTGRES_USER -d postgres
           psql -h $POSTGRES_HOST -p $POSTGRES_PORT -U$POSTGRES_USER -d $POSTGRES_DB -c "\d+"
           psql -h $POSTGRES_HOST -p $POSTGRES_PORT -U$POSTGRES_USER -d $POSTGRES_DB -c "SHOW TIMEZONE;"
+          dig pgmq
+          echo "\l" | psql -h $PGMQ_HOST -p $PGMQ_PORT -U$PGMQ_USER -d postgres
+          psql -h $PGMQ_HOST -p $PGMQ_PORT -U$PGMQ_USER -d $PGMQ_DB -c "\d+"
+          psql -h $PGMQ_HOST -p $PGMQ_PORT -U$PGMQ_USER -d $PGMQ_DB -c "SHOW TIMEZONE;"
         env:
           CI: true
           POSTGRES_HOST: postgres
@@ -76,16 +80,11 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           PGPASSWORD: postgres
-
-      - name: Install Dependencies
-        timeout-minutes: 15
-        run: |
-          # DO NOT execute: npm config set unsafe-perm=true
-          export cwd=`pwd`
-          npm i --no-audit -g c8 lerna madge tsx zx
-          npm i
-        env:
-          CI: true
+          PGMQ_HOST: pgmq
+          PGMQ_PORT: 5432
+          PGMQ_DB: db_ci_test
+          PGMQ_USER: postgres
+          PGMQ_PASSWORD: postgres
 
       - name: Init Database
         run: |
@@ -103,7 +102,19 @@ jobs:
           PGPASSWORD: postgres
           PGMQ_HOST: pgmq
           PGMQ_PORT: 5432
+          PGMQ_DB: db_ci_test
+          PGMQ_USER: postgres
           PGMQ_PASSWORD: postgres
+
+      - name: Install Dependencies
+        timeout-minutes: 15
+        run: |
+          # DO NOT execute: npm config set unsafe-perm=true
+          export cwd=`pwd`
+          npm i --no-audit -g c8 lerna madge tsx zx
+          npm i
+        env:
+          CI: true
 
       - name: Build
         run: |
