--- a/.github/workflows/npm-manual-publish.yml
+++ b/.github/workflows/npm-manual-publish.yml
@@ -137,6 +137,12 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           PGPASSWORD: postgres
+          # pgmq
+          PGMQ_HOST: pgmq
+          PGMQ_PORT: 5432
+          PGMQ_DB: db_ci_test
+          PGMQ_USER: postgres
+          PGMQ_PASSWORD: postgres
 
       - name: Testing
         run: |
@@ -156,6 +162,12 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           PGPASSWORD: postgres
+          # pgmq
+          PGMQ_HOST: pgmq
+          PGMQ_PORT: 5432
+          PGMQ_DB: db_ci_test
+          PGMQ_USER: postgres
+          PGMQ_PASSWORD: postgres
           # redis
           REDIS_HOST: redis
           REDIS_PORT: 6379
@@ -226,4 +238,19 @@ jobs:
           - 6832:6832/udp
           - 14250:14250
           - 16686:16686
+
+      pgmq:
+        image: quay.io/tembo/pg16-pgmq:latest
+        ports:
+          - 5433:5432
+        env:
+          POSTGRES_DB: db_ci_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        # needed because the postgres container does not provide a healthcheck
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
